# waveshare-esp32s3-touch-lcd

./: .gitignore  CMakeLists.txt  EEZ_UI_GUIDE.md  README.md  VSCODE_SETUP.md  idf_component.yml  sdkconfig.defaults
components/eez_ui/: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  board_config.h  board_init.c  board_init.h  lv_conf.h
ui/: README.md  eez-flow.h
